fix: header align center

--- a/css/style.css
+++ b/css/style.css
@@ -6155,6 +6155,7 @@ button.testimonial-arrow-btn:hover:before {
   font-weight: 400;
   line-height: 32px;
   color: #141F39;
+  text-transform: capitalize;
 }
 .post-meta .meta-user-content .desc {
   font-size: 14px;
